; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/CHMLib/src/extr_enumdir_chmLib.c_main.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/CHMLib/src/extr_enumdir_chmLib.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.chmFile = type { i32 }

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"%s <chmfile> [dir] [dir] ...\0A\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c"failed to open %s\0A\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"/:\0A\00", align 1
@.str.3 = private unnamed_addr constant [38 x i8] c" spc    start   length   type\09\09\09name\0A\00", align 1
@.str.4 = private unnamed_addr constant [38 x i8] c" ===    =====   ======   ====\09\09\09====\0A\00", align 1
@.str.5 = private unnamed_addr constant [2 x i8] c"/\00", align 1
@CHM_ENUMERATE_ALL = common dso_local global i32 0, align 4
@_print_ui = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [18 x i8] c"   *** ERROR ***\0A\00", align 1
@.str.7 = private unnamed_addr constant [5 x i8] c"%s:\0A\00", align 1
@.str.8 = private unnamed_addr constant [31 x i8] c" spc    start   length   name\0A\00", align 1
@.str.9 = private unnamed_addr constant [31 x i8] c" ===    =====   ======   ====\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca %struct.chmFile*, align 8
  %7 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = icmp slt i32 %8, 2
  br i1 %9, label %10, label %17

10:                                               ; preds = %2
  %11 = load i32, i32* @stderr, align 4
  %12 = load i8**, i8*** %5, align 8
  %13 = getelementptr inbounds i8*, i8** %12, i64 0
  %14 = load i8*, i8** %13, align 8
  %15 = call i32 @fprintf(i32 %11, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i8* %14)
  %16 = call i32 @exit(i32 1) #3
  unreachable

17:                                               ; preds = %2
  %18 = load i8**, i8*** %5, align 8
  %19 = getelementptr inbounds i8*, i8** %18, i64 1
  %20 = load i8*, i8** %19, align 8
  %21 = call %struct.chmFile* @chm_open(i8* %20)
  store %struct.chmFile* %21, %struct.chmFile** %6, align 8
  %22 = load %struct.chmFile*, %struct.chmFile** %6, align 8
  %23 = icmp eq %struct.chmFile* %22, null
  br i1 %23, label %24, label %31

24:                                               ; preds = %17
  %25 = load i32, i32* @stderr, align 4
  %26 = load i8**, i8*** %5, align 8
  %27 = getelementptr inbounds i8*, i8** %26, i64 1
  %28 = load i8*, i8** %27, align 8
  %29 = call i32 @fprintf(i32 %25, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i8* %28)
  %30 = call i32 @exit(i32 1) #3
  unreachable

31:                                               ; preds = %17
  %32 = load i32, i32* %4, align 4
  %33 = icmp slt i32 %32, 3
  br i1 %33, label %34, label %46

34:                                               ; preds = %31
  %35 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0))
  %36 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.3, i64 0, i64 0))
  %37 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.4, i64 0, i64 0))
  %38 = load %struct.chmFile*, %struct.chmFile** %6, align 8
  %39 = load i32, i32* @CHM_ENUMERATE_ALL, align 4
  %40 = load i32, i32* @_print_ui, align 4
  %41 = call i32 @chm_enumerate_dir(%struct.chmFile* %38, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.5, i64 0, i64 0), i32 %39, i32 %40, i32* null)
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %45, label %43

43:                                               ; preds = %34
  %44 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.6, i64 0, i64 0))
  br label %45

45:                                               ; preds = %43, %34
  br label %77

46:                                               ; preds = %31
  store i32 2, i32* %7, align 4
  br label %47

47:                                               ; preds = %73, %46
  %48 = load i32, i32* %7, align 4
  %49 = load i32, i32* %4, align 4
  %50 = icmp slt i32 %48, %49
  br i1 %50, label %51, label %76

51:                                               ; preds = %47
  %52 = load i8**, i8*** %5, align 8
  %53 = load i32, i32* %7, align 4
  %54 = sext i32 %53 to i64
  %55 = getelementptr inbounds i8*, i8** %52, i64 %54
  %56 = load i8*, i8** %55, align 8
  %57 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.7, i64 0, i64 0), i8* %56)
  %58 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.8, i64 0, i64 0))
  %59 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.9, i64 0, i64 0))
  %60 = load %struct.chmFile*, %struct.chmFile** %6, align 8
  %61 = load i8**, i8*** %5, align 8
  %62 = load i32, i32* %7, align 4
  %63 = sext i32 %62 to i64
  %64 = getelementptr inbounds i8*, i8** %61, i64 %63
  %65 = load i8*, i8** %64, align 8
  %66 = load i32, i32* @CHM_ENUMERATE_ALL, align 4
  %67 = load i32, i32* @_print_ui, align 4
  %68 = call i32 @chm_enumerate_dir(%struct.chmFile* %60, i8* %65, i32 %66, i32 %67, i32* null)
  %69 = icmp ne i32 %68, 0
  br i1 %69, label %72, label %70

70:                                               ; preds = %51
  %71 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.6, i64 0, i64 0))
  br label %72

72:                                               ; preds = %70, %51
  br label %73

73:                                               ; preds = %72
  %74 = load i32, i32* %7, align 4
  %75 = add nsw i32 %74, 1
  store i32 %75, i32* %7, align 4
  br label %47

76:                                               ; preds = %47
  br label %77

77:                                               ; preds = %76, %45
  %78 = load %struct.chmFile*, %struct.chmFile** %6, align 8
  %79 = call i32 @chm_close(%struct.chmFile* %78)
  ret i32 0
}

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local %struct.chmFile* @chm_open(i8*) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @chm_enumerate_dir(%struct.chmFile*, i8*, i32, i32, i32*) #1

declare dso_local i32 @chm_close(%struct.chmFile*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
